[project]
name = "datalogger-backend"
version = "0.1.0"
description = "Backend of the HPS data logger responsible for collecting the sensor data and supplying the data to the frontend."
authors = [
    {name = "ywcb00",email = "ywcb00@ywcb.org"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "flask-cors (>=6.0.2,<7.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
